ISPN-15286 Use jdk to export tracing data
While upgrading OpenTelemetry to 1.31